@@ -12,7 +12,8 @@
 
 <!-- test citations -->
     <ep:citation type="eprint_misc"><span class="citation">&authors; <ep:ifset name="year">(&year;) </ep:ifset>&title;.<ep:iflink> [<ep:linkhere>view</ep:linkhere>]</ep:iflink></span></ep:citation>
-    <ep:citation type="eprint_title_only"><tr><td>&title; [<ep:linkhere>view</ep:linkhere>]</td></tr></ep:citation>
+
+    <ep:citation type="eprint_title_only"><tr><td>&title;</td><td>&authors;</td><td><ep:linkhere>view</ep:linkhere></td></tr></ep:citation>
 
 <!-- eprint citations -->
     <ep:citation type="eprint"><ep:ifset name="title">&title;</ep:ifset><ep:ifnotset name="title">Untitled &eprintid;</ep:ifnotset></ep:citation>
